...
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/ingredients_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="8dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
...

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewSteps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_card" />

</android.support.constraint.ConstraintLayout>
